pxc/tests/test_194_ephemeral/eph5.px

public namespace eph5;
import core::common -;

ephemeral struct foo(slice{int} x0) {
  public slice{int} x = x0;
}

function slice{int} test_ephemeral_escape(int x)
{
  varray{int} a;
  a.push_back(x);
  foo fv = foo(a);
  println(fv);
  return slice{int}();
  // return fv; // error: returning invalid ephemeral value
}

{
  test_ephemeral_escape(3);
}
